--- a/css/style.css
+++ b/css/style.css
@@ -15,3 +15,10 @@
   background-color: green;
   text-align: center;
 }
+.contact{
+  background-color: pink;
+}
+.footer{
+  background-color: green;
+  text-align: center;
+}
