--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
   background-color: lightgreen;
 }
 .bg_light_blue {
-  background-color: lightblue;
+  background-color: #2c3f50;
 }
 
 .wrapper_small {
