--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,9 @@
 .bg_light_blue {
   background-color: #2c3f50;
 }
+.m_top_30 {
+  margin-top: 30px;
+}
 
 .wrapper_small {
   max-width: 800px;
@@ -31,12 +34,14 @@
 
 }
 .list-inline li a:hover{
+  text-decoration: none;
   color: green;
 }
 
 .header_left{
   font-size: 1.9rem;
 }
+
 
 /* HEADER */
 
@@ -65,7 +70,7 @@
   text-align: center;
 }
 .jumbo_text img{
-  height: 200px;
+  max-width:210px;
 }
 .jumbo_text h1{
   color: white;
@@ -75,6 +80,24 @@
 .jumbo_star{
   color: white;
   font-size: 30px;
+}
+
+.jumbo_star::before{
+  content: "";
+  display:inline-block;
+  vertical-align: middle;
+  height:3px;
+  width:100px;
+  background-color: white;
+}
+
+.jumbo_star::after{
+  content: "";
+  display:inline-block;
+  vertical-align: middle;
+  height:3px;
+  width:100px;
+  background-color: white;
 }
 .jumbo_text p{
   color: white;
@@ -89,19 +112,90 @@
   font-size: 30px;
   text-align: center;
 }
+
+.porfolio_star::before{
+  content: "";
+  display:inline-block;
+  vertical-align: middle;
+  height:3px;
+  border-radius: 3px;
+  width:100px;
+  background-color: black;
+}
+
+.porfolio_star::after{
+  content: "";
+  display:inline-block;
+  vertical-align: middle;
+  height:3px;
+  border-radius: 3px;
+  width:100px;
+  background-color: black;
+}
 .box_portfolio {
-  height: 250px;
+  position: relative;
+  background-color: blue;
   margin-bottom: 30px;
+  border-radius: 5px;
+  overflow: hidden;
+}
+
+.overlay {
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(26, 188, 156, 0.9);
+}
+
+.box_portfolio:hover .overlay {
+  display: block;
+  cursor: pointer;
+}
+
+.overlay i {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: #fff;
+  font-size: 70px;
+  font-weight: bold;
 }
 .box_portfolio img{
-  height:200px;
+width:100%
 }
 
 /* about */
 #about h2{
   color:white;
-  font-size: 5rem
+  font-size: 5rem;
+  margin-bottom: 20px;
 }
+
+.dec_star {
+  font-size: 35px;
+  margin: 15px 0;
+}
+.dec_star i {
+  margin: 0 5px;
+  color: #fff;
+}
+
+.dec_star::before, .dec_star::after {
+  content: "";
+  display: inline-block;
+  vertical-align: middle;
+  height: 3px;
+  width: 100px;
+  background-color: #fff;
+  border-radius: 3px;
+}
+
+
+
 
 /* FOOTER */
 
